<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/table"
    android:layout_width="wrap_content"
    >


    <TextView
        android:id="@+id/tvSTT"
        style="@style/tvtable2"
        android:layout_width="30dp"
        android:text="STT" />

    <TextView
        android:id="@+id/tvMaSP"
        style="@style/tvtable2"
        android:layout_width="52dp"
        android:text="@string/masp" />

    <TextView
        android:id="@+id/tvTenSP"
        style="@style/tvtable2"
        android:layout_width="97dp"
        android:text="@string/tensp" />

    <TextView
        android:id="@+id/tvSTP"
        style="@style/tvtable2"
        android:layout_width="64dp"
        android:text="@string/stp" />

    <TextView
        android:id="@+id/tvSPP"
        style="@style/tvtable2"
        android:layout_width="50dp"
        android:text="@string/spp" />

    <TextView
        android:id="@+id/tvTC"
        style="@style/tvtable2"
        android:layout_width="39dp"
        android:text="Tien Cong" />

    <TextView
        android:id="@+id/tvTT"
        style="@style/tvtable2"
        android:layout_width="56dp"
        android:text="Thanh tien" />
</TableRow>